kubernetes/orion/manifests/infra/gitea/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gitea
  labels:
    pod-security.kubernetes.io/enforce: baseline
